samples/_failures_safe/1761469111_46cc25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4054b8d.c: In function ‘main’:
./samples/SAFE/__tmp_c4054b8d.c:151:12: error: missing terminating " character
  151 |     printf("
      |            ^
./samples/SAFE/__tmp_c4054b8d.c:151:5: error: expected expression at end of input
  151 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_c4054b8d.c:151:5: error: expected declaration or statement at end of input
